{
  "@@locale": "pt",

  "appTitle": "Inviscan",
  "homeTitle": "Escanear",
  "scanUrlLabel": "Digite a url para iniciar o scan",
  "clearField": "Limpar",
  "scanButton": "Escanear",
  "settingsTitle": "Configurações",

  "previousScans": "Scans anteriores",
...
